--- a/Contact.html
+++ b/Contact.html
@@ -7,5 +7,7 @@
     <div>Ini halaman Contact</div>
     <div>Ini halaman Contact</div>
     <div>Ini halaman Contact</div>
+    <div>Coba, conflict nggak hayo?</div>
+    <div>Coba, conflict nggak hayo?</div>
   </body>
 </html>
