--- a/Home.html
+++ b/Home.html
@@ -44,6 +44,18 @@
       </div>
     </div>
   </nav>
+  <section class="row">
+    <div class="content-1">
+      <h1>Lorem ipsum</h1>
+    </div>
+    <div class="content-2">
+      <h1>Lorem ipsum</h1>
+    </div>
+    <div class="content-3 col-md-6">
+      <h1>Lorem ipsum</h1>
+    </div>
+  </section>
+
 </body>
 
 </html>
